kbn-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kbn-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /kbn
            backend:
              service:
                name: kbn-service
                port:
                  number: 8081
          - pathType: Prefix
            path: /kbn/swagger-ui
            backend:
              service:
                name: kbn-service
                port:
                  number: 8081
